--- a/PalletsApiCore/appsettings.Development.json
+++ b/PalletsApiCore/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EscorialPostgreSql": "Host=your_host_ip;Database=your_database;Username=your_username;Password=your_password"
   }
 }
